# oomllama

./: .gitignore  Cargo.toml  README.md  pyproject-maturin.toml  pyproject-pure.toml  pyproject.toml  safetensors2oom.py
docker/: DOCKERHUB_README.md  Dockerfile  Dockerfile.api  server.py
python/oomllama/: __init__.py  __main__.py
src/: gguf2oom.rs  lib.rs  oom_inference.rs  oomllama.rs  oomllama_turbo.rs  python.rs  quant.rs  safetensors2oom.rs
