[package]
name = "oomllama"
version = "0.6.0"
edition = "2021"
authors = ["Jasper van de Meent <jasper@humotica.com>", "Root AI <root_idd@humotica.nl>"]
description = "OomLlama - Efficient LLM inference with .oom format. 2x smaller than GGUF."
license = "MIT"
repository = "https://github.com/jaspertvdm/oomllama"
keywords = ["llm", "inference", "quantization", "gguf", "oom", "oomllama", "humotica"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# File watching
notify = "6.1.1"

# Database
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Concurrency
parking_lot = "0.12.5"
dashmap = "6.1.0"

# Memory mapping for lazy loading
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Candle for GPU inference
candle-core = { version = "0.9.1", features = ["cuda"] }
candle-nn = { version = "0.9.1", features = ["cuda"] }
candle-transformers = { version = "0.9.1", features = ["cuda"] }

# HuggingFace Hub for model downloads
hf-hub = "0.4.3"
tokenizers = "0.22.2"

# CLI & TUI
colored = "2.0"
shellexpand = "3.1"
regex = "1.12.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
ratatui = { version = "0.30.0", features = ["all-widgets", "crossterm"] }
crossterm = "0.29.0"

# HTTP client
reqwest = { version = "0.13.1", features = ["json"] }

# Utils
ctrlc = "3.4"
tempfile = "3.14"
walkdir = "2.5.0"

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
full = ["python"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "oomllama"
path = "src/bin/oomllama.rs"

[[bin]]
name = "gguf2oom"
path = "src/bin/quantize.rs"

[lib]
name = "oomllama"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
